[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phoenixvc-tokenutil"
version = "0.1.0"
description = "Token counting and document chunking primitives for phoenixvc LLM workloads"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["tiktoken>=0.7.0"]

[project.optional-dependencies]
gemini = ["sentencepiece>=0.2.0"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
]

[project.urls]
Repository = "https://github.com/phoenixvc/tokenutil"

[tool.hatch.build.targets.wheel]
packages = ["src/tokenutil"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
